- Updated the /concurrent/ API to return yesterday's daily concurrent usage   instead of today, changing the default behavior of   /api/cloudigrade/v2/concurrent/ - Requesting a start_date of today with the concurrent api now returns a 400. - The current behavior of the /concurrent/ API is made available   via the new /internal/api/cloudigrade/v1/concurrent endpoint. - Updated tests for public concurrent API for the new defaults. - Updates to generated docs and openapi
