# cloudigrade/api/views.py
@@ -1,6 +1,4 @@
 """Public views for cloudigrade API."""
-from datetime import timedelta
-
 from dateutil.parser import parse
 from django.conf import settings
 from django.db import transaction
@@ -15,7 +13,7 @@ from api import schemas
 from api.authentication import IdentityHeaderAuthenticationUserNotRequired
 from api.serializers import DailyConcurrentUsageDummyQueryset
 from util.aws.sts import _get_primary_account_id, cloudigrade_policy
-from util.misc import get_today
+from util.misc import get_today, get_yesterday
 
 
 class AccountViewSet(viewsets.ReadOnlyModelViewSet):
@@ -93,23 +91,26 @@ class DailyConcurrentUsageViewSet(viewsets.GenericViewSet, mixins.ListModelMixin
         """Get the queryset of dates filtered to the appropriate inputs."""
         user = self.request.user
         errors = {}
-        tomorrow = get_today() + timedelta(days=1)
+        today = get_today()
+        yesterday = get_yesterday()
         try:
             start_date = self.request.query_params.get("start_date", None)
-            start_date = parse(start_date).date() if start_date else get_today()
+            start_date = parse(start_date).date() if start_date else yesterday
             # Start date is inclusive, if start date is tomorrow or after,
             # we do not return anything
-            if start_date >= tomorrow:
-                errors["start_date"] = [_("start_date cannot be in the future.")]
+            if start_date >= today:
+                errors["start_date"] = [
+                    _("start_date cannot be today or in the future.")
+                ]
         except ValueError:
             errors["start_date"] = [_("start_date must be a date (YYYY-MM-DD).")]
 
         try:
             end_date = self.request.query_params.get("end_date", None)
-            # End date is noninclusive, set it to tomorrow if one is not provided
-            end_date = parse(end_date).date() if end_date else tomorrow
+            # End date is noninclusive, set it to today if one is not provided
+            end_date = parse(end_date).date() if end_date else today
             # If end date is after tomorrow, we do not return anything
-            if end_date > tomorrow:
+            if end_date > today:
                 errors["end_date"] = [_("end_date cannot be in the future.")]
             if end_date <= user.date_joined.date():
                 errors["end_date"] = [_("end_date must be after user creation date.")]
