# cloudigrade/internal/serializers.py
@@ -1,6 +1,8 @@
 """DRF serializers for the cloudigrade internal API."""
 from django.contrib.auth.models import User
-from rest_framework.serializers import ModelSerializer
+from rest_framework import serializers
+from rest_framework.serializers import ModelSerializer, Serializer
+
 
 from api import models
 from api.clouds.aws import models as aws_models
@@ -214,3 +216,10 @@ class InternalAzureMachineImageSerializer(ModelSerializer):
             "is_cloud_access",
             "is_marketplace",
         )
+
+
+class InternalDailyConcurrentUsageSerializer(Serializer):
+    """Serialize a report of daily RHEL concurrency over time for the API."""
+
+    date = serializers.DateField(required=True)
+    maximum_counts = serializers.ReadOnlyField()
